# univercity_term2

./: README.md
algorithms/lab1/: main.c
algorithms/lab2/: main.c  queue.c  queue.h
algorithms/lab3/: hash.c  hash.h  main.c
algorithms/lab4/: main.c  min_heap.c  min_heap.h
lab1/: list.c  main.c  stack.h
lab2/: csv.c  main.c
lab3/csvlab/: CMakeLists.txt  csv.h  list.h
lab3/program/: CMakeLists.txt  bstree.c  data.csv  main.c  out.csv
lab4/: data.txt  stack.cpp
lab5/: csv.hpp  cui.hpp  language.cpp  programmers.cpp  programmers.hpp  storage.hpp
lab6/: csv.cpp  cui.hpp  lab6.pro
lab7/: lab7.pro  mainwindow.cpp  mainwindow.h  xml_storage.h
lab7/data/xml/: lang.xml  new_storage.xml
lab8/: csv_storage.cpp  csv_storage.h  main.cpp  sqlite_storage.cpp  storage.hpp
lab8/data/sqlite/: data.sqlite
lab9/: dialog.cpp  dialog_e.h  dialog_e.ui  lab9.pro  language.hpp  login.cpp  login.h  mainwindow.cpp  sqlite_storage.h  storage.hpp  user.h  xml_storage.cpp  xml_storage.h
programming/lab1/: list.h  stack.c
programming/lab2/: csv.h  data.csv  list.c
programming/lab4/: list.cpp  list.hpp  main.cpp  stack.hpp
programming/lab5/: CMakeLists.txt  cui.cpp  language.hpp  main.cpp  storage.cpp
programming/lab6/: cui.cpp  main.cpp  optional.h  xml_storage.cpp
programming/lab7/: dialog.cpp  dialog.h  dialog.ui  mainwindow.ui  xml_storage.cpp
programming/lab8/: cui.cpp  lab8.pro  sqlite_storage.h
programming/lab9/: dialog.h  dialog.ui  dialog_e.cpp  login.ui  main.cpp  mainwindow.h  mainwindow.ui  programmers.hpp  sqlite_storage.cpp
(+16 files in other folders)
